--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Test Symfo{% endblock %}</title>
+    <title>{% block title %}AdopteUnLegume{% endblock %}</title>
     {% block stylesheets %}
     <link rel="stylesheet" href="{{ asset('/build/css/bootstrap.css') }}">
     <link rel="stylesheet" href="{{ asset('/build/css/general.css') }}">
@@ -21,7 +21,7 @@
         <div class="row">
             <div class="d-flex flex-row justify-content-around navBar">
                 <div class="p-2 titreNav">
-                   Test Symfony
+                    AdopteUnLegume
                 </div>
                 <div class="p-2 titreNav">
                     <a class="navLink" href="/">
